till fine tune model part

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -1682,7 +1682,128 @@
    "source": [
     "Perfect fit? it's more like model has badly overfit data. As we saw earlier, you don’t want to touch the test setuntil you are ready to launch a model you are confident about, so you need to use part of the training set for training and part of it for model validation.\n",
     "\n",
-    "### Better Evaluation Using Cross-Validation"
+    "### Better Evaluation Using Cross-Validation\n",
+    "\n",
+    "Greate way to evaluate a Decision Tree model is to use _K=fold cross-validation_ feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(tree_reg, housing_prepared, housing_labels, \n",
+    "                         scoring='neg_mean_squared_error', cv=10)\n",
+    "tree_rmse_scores = np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**WARNING**\n",
+    "\n",
+    "Scikit-Learn’s cross-validation features expect a utility function (greater is better) rather than a cost function (lower is better), so the scoring function is actually the opposite of the MSE (i.e., a negative value), which is why the preceding code computes -scores before calculating the square root."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [69427.15143465 66980.8430903  70166.92989001 69891.79816282\n",
+      " 72780.73254871 74041.42230128 69971.67363644 71962.16433392\n",
+      " 76024.21827089 70522.82794398]\n",
+      "Mean: 71176.97616130012\n",
+      "Standard Deviation: 2451.7610430563327\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the results\n",
+    "def display_scores(scores):\n",
+    "    \"\"\"Prints the cross-validation scores\"\"\"\n",
+    "    print('Scores:', scores)\n",
+    "    print('Mean:', scores.mean())\n",
+    "    print('Standard Deviation:', scores.std())\n",
+    "    \n",
+    "display_scores(tree_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cross-validation allows you to get not only an estimate of the performance of your model, but also a measure of how precise this estimate is (i.e., its standard deviation).\n",
+    "The Decision Tree has a score of approximately 71,407, generally ±2,439. You would not have this information if you just used one validation set. But cross-validation comes at the cost of training the model several times, so it is not always possible.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [66782.73843989 66960.118071   70347.95244419 74739.57052552\n",
+      " 68031.13388938 71193.84183426 64969.63056405 68281.61137997\n",
+      " 71552.91566558 67665.10082067]\n",
+      "Mean: 69052.46136345083\n",
+      "Standard Deviation: 2731.674001798348\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute CV for Linear Model\n",
+    "lin_scores = cross_val_score(lin_reg, housing_prepared, housing_labels, \n",
+    "                       scoring='neg_mean_squared_error', cv=10)\n",
+    "\n",
+    "lin_rmse_scores = np.sqrt(-lin_scores)\n",
+    "display_scores(lin_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That’s right: the **Decision Tree** model is overfitting so badly that it performs worse than the **Linear Regression** model.\n",
+    "\n",
+    "----\n",
+    "You should save every model you experiment with so that you can come back easily to\n",
+    "any model you want. Make sure you save both the hyperparameters and the trained\n",
+    "parameters, as well as the cross-validation scores and perhaps the actual predictions as\n",
+    "well. This will allow you to easily compare scores across model types, and compare the\n",
+    "types of errors they make. You can easily save Scikit-Learn models by using Python’s\n",
+    "`pickle` module or by using the `joblib` library, which is more efficient at serializing\n",
+    "large NumPy arrays (you can install this library using pip):"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(my_model, 'my_model.pkl')\n",
+    "\n",
+    "# and later...\n",
+    "my_model_load = joblib.load('my_model.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine-Tune Your Model"
    ]
   },
   {
