some progress onm ch 2

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,18 +1711,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [69427.15143465 66980.8430903  70166.92989001 69891.79816282\n",
-      " 72780.73254871 74041.42230128 69971.67363644 71962.16433392\n",
-      " 76024.21827089 70522.82794398]\n",
-      "Mean: 71176.97616130012\n",
-      "Standard Deviation: 2451.7610430563327\n"
+      "Scores: [68097.76096956 67543.20053703 71529.51396745 69185.28688981\n",
+      " 70362.79884011 73826.41786135 70848.12195403 71045.43341928\n",
+      " 77290.03139346 70578.55140046]\n",
+      "Mean: 71030.71172325415\n",
+      "Standard Deviation: 2685.116361833653\n"
      ]
     }
    ],
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fine-Tune Your Model"
+    "## Fine-Tune Your Model\n",
+    "One option would be to fiddle with the hyperparameters manually, until you find a great combination of hyperparameter values. This is a lots of work so instead we can use `GridSearchCV`. All you need to do is tell it which hyperparameters you want it to experiment with and what values to try out, and it will use cross-validation to evaluate all the possible combinations of hyperparameter values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RandomForestRegressor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-b1fc3b0b9f69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m ]\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mforest_reg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RandomForestRegressor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Search for the best combination of hyperparameter values\n",
+    "param_grid = [\n",
+    "    {'n_estimators': [3, 10, 30], 'max_features': [2, 4, 6, 8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3, 10], 'max_features': [2, 3, 4]}\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
+    "                           scoring='neg_mean_squared_error',\n",
+    "                           return_train_score=True)\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_labels)\n",
+    "\n",
+    "'''When you have no idea what value a hyperparameter should have, a simple approach is\n",
+    "to try out consecutive powers of 10 (or a smaller number if you want a more fine-grained\n",
+    "search, as shown in this example with the n_estimators hyperparameter)'''"
    ]
   },
   {
