--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,11 +1718,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: [68097.76096956 67543.20053703 71529.51396745 69185.28688981\n",
-      " 70362.79884011 73826.41786135 70848.12195403 71045.43341928\n",
-      " 77290.03139346 70578.55140046]\n",
-      "Mean: 71030.71172325415\n",
-      "Standard Deviation: 2685.116361833653\n"
+      "Scores: [69696.54730569 65585.06141395 71020.40802775 69227.21411845\n",
+      " 70802.32075225 75513.674699   69932.10478127 70139.84060963\n",
+      " 76619.88538483 69078.81450728]\n",
+      "Mean: 70761.5871600105\n",
+      "Standard Deviation: 3019.304629350273\n"
      ]
     }
    ],
@@ -1803,29 +1803,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Parameter vs Hyperparameter:\n",
+    "\n",
+    "A model _parameter_ is a configuration variable that is internal to the model and whose value can be estimated from data. \n",
+    "\n",
+    "- The weights in an artificial neural network.\n",
+    "- The support vectors in a support vector machine.\n",
+    "- The coefficients in a linear regression or logistic regression\n",
+    "\n",
+    "A model _hyperparameter_ is a configuration that is external to the model and whose value cannot be estimated from data.\n",
+    "\n",
+    "- The learning rate for training a neural network.\n",
+    "- The C and sigma hyperparameters for support vector machines.\n",
+    "- The k in k-nearest neighbors.\n",
+    "\n",
+    "If you have to specify a model parameter manually then it is probably a model hyperparameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fine-Tune Your Model\n",
-    "One option would be to fiddle with the hyperparameters manually, until you find a great combination of hyperparameter values. This is a lots of work so instead we can use `GridSearchCV`. All you need to do is tell it which hyperparameters you want it to experiment with and what values to try out, and it will use cross-validation to evaluate all the possible combinations of hyperparameter values."
+    "\n",
+    "### Grid Search\n",
+    "To find a great combination of hyperparameter values we can use Scikit's `GridSearchCV` to search for us. All you need to do is tell it which hyperparameters you want it to experiment with and what values to try out, and it will use cross-validation to evaluate all the possible combinations of hyperparameter values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'RandomForestRegressor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-b1fc3b0b9f69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m ]\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mforest_reg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRandomForestRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'RandomForestRegressor' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'When you have no idea what value a hyperparameter should have, a simple approach is\\nto try out consecutive powers of 10 (or a smaller number if you want a more fine-grained\\nsearch, as shown in this example with the n_estimators hyperparameter)'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "# Search for the best combination of hyperparameter values\n",
     "param_grid = [\n",
@@ -1837,13 +1860,102 @@
     "\n",
     "grid_search = GridSearchCV(forest_reg, param_grid, cv=5,\n",
     "                           scoring='neg_mean_squared_error',\n",
-    "                           return_train_score=True)\n",
+    "                           return_train_score=True,\n",
+    "                           refit=True)\n",
     "\n",
     "grid_search.fit(housing_prepared, housing_labels)\n",
     "\n",
     "'''When you have no idea what value a hyperparameter should have, a simple approach is\n",
     "to try out consecutive powers of 10 (or a smaller number if you want a more fine-grained\n",
     "search, as shown in this example with the n_estimators hyperparameter)'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This `param_grid` tells Scikit-Learn to first evaluate all 3 × 4 = 12 combinations of n_estimators and max_features hyperparameter values specified in the first `dict`, hen try all 2 × 3 = 6 combinations of hyperparameter values in the second `dict`, but this time withthe bootstrap hyperparameter set to False instead of True (which is the default value for this hyperparameter).\n",
+    "\n",
+    "The grid search will explore 12 + 6 = 18 combinations of RandomForestRegressor hyperparameter values, and it will train each model 5 times (As specified in `cv` argument). All in all, there will be 18 × 5 = 90 rounds of training! It may take quite a long time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_features': 8, 'n_estimators': 30}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=8, n_estimators=30)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the best estimator directly\n",
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64064.32814078743 {'max_features': 2, 'n_estimators': 3}\n",
+      "55443.22016291406 {'max_features': 2, 'n_estimators': 10}\n",
+      "53118.78045568364 {'max_features': 2, 'n_estimators': 30}\n",
+      "60542.420769674485 {'max_features': 4, 'n_estimators': 3}\n",
+      "53212.77168293647 {'max_features': 4, 'n_estimators': 10}\n",
+      "50592.786826768985 {'max_features': 4, 'n_estimators': 30}\n",
+      "58868.82146909646 {'max_features': 6, 'n_estimators': 3}\n",
+      "52769.71702681606 {'max_features': 6, 'n_estimators': 10}\n",
+      "50176.973593031646 {'max_features': 6, 'n_estimators': 30}\n",
+      "59083.54987155549 {'max_features': 8, 'n_estimators': 3}\n",
+      "52432.03050280806 {'max_features': 8, 'n_estimators': 10}\n",
+      "50032.41657240629 {'max_features': 8, 'n_estimators': 30}\n",
+      "62496.88118882764 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "53988.38006824648 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "60614.10954401608 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52572.86741036294 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "59244.29203689943 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51993.5809224866 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluation Scores\n",
+    "cvres = grid_search.cv_results_\n",
+    "\n",
+    "for mean_score, params in zip(cvres['mean_test_score'], cvres['params']):\n",
+    "    print(np.sqrt(-mean_score), params)"
    ]
   },
   {
