--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -1959,6 +1959,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Randomized Search\n",
+    "The grid search approach is fine when you are exploring relatively few combinations, like in the previous example, but when the hyperparameter search space is large, it is often preferable to use `RandomizedSearchCV` instead. This class can be used in much the same way as the `GridSearchCV` class, but instead of trying out all possible combinations, it evaluates a givennumber of random combinations by selecting a random value for each hyperparameter at every iteration. This approach has two main benefits:\n",
+    "\n",
+    "### Analyze the Best Models and Their Errors\n",
+    "You will often gain good insights on the problem by inspecting the best models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.52308510e-02 6.08598096e-02 4.40603508e-02 1.54315116e-02\n",
+      " 1.43506227e-02 1.61776963e-02 1.41387946e-02 3.59375009e-01\n",
+      " 3.81672863e-02 1.15148977e-01 8.05426646e-02 3.57534651e-03\n",
+      " 1.67537649e-01 6.62740771e-05 2.26267645e-03 3.07448069e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "print(feature_importances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.3593750092635564, 'median_income'),\n",
+       " (0.16753764886180575, 'INLAND'),\n",
+       " (0.11514897654768379, 'pop_per_hhold'),\n",
+       " (0.08054266457090085, 'bedrooms_per_room'),\n",
+       " (0.06523085104582141, 'longitude'),\n",
+       " (0.060859809605829006, 'latitude'),\n",
+       " (0.044060350835651414, 'housing_median_age'),\n",
+       " (0.03816728627828519, 'rooms_per_hhold'),\n",
+       " (0.01617769629467036, 'population'),\n",
+       " (0.015431511613217047, 'total_rooms'),\n",
+       " (0.01435062270393606, 'total_bedrooms'),\n",
+       " (0.014138794648720717, 'households'),\n",
+       " (0.0035753465119256105, '<1H OCEAN'),\n",
+       " (0.0030744806927922317, 'NEAR OCEAN'),\n",
+       " (0.0022626764481411157, 'NEAR BAY'),\n",
+       " (6.627407706304577e-05, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display feature importances next to their attribute names\n",
+    "extra_attribs = ['rooms_per_hhold', 'pop_per_hhold', 'bedrooms_per_room']\n",
+    "cat_encoder = full_pipeline.named_transformers_['cat']\n",
+    "cat_one_hot_attribs = list(cat_encoder.categories_[0])\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_attribs\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this information, you may want to try dropping some of the less useful features.\n",
+    "\n",
+    "### Evaluate System on the Test Set\n",
+    "just get the predictors and the labels from your test set, run your `full_pipeline` to transform the data\n",
+    "(call `transform()` , not `fit_transform()` —you do not want to fit the test set!), and evaluate the final model on the test set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE: 48328.74902644482\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "X_test = strata_test_set.drop('median_house_value', axis=1)\n",
+    "y_test = strata_test_set['median_house_value'].copy()\n",
+    "\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)\n",
+    "\n",
+    "print('RMSE:', final_rmse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may want to know how precise this estimate is. For this you can compute a 95% confidence interval for the generalization error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([46323.13107915, 50254.387788  ])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "CONFIDENCE = 0.95\n",
+    "\n",
+    "squared_errors = (final_predictions - y_test) ** 2\n",
+    "np.sqrt(stats.t.interval(CONFIDENCE, len(squared_errors) - 1,\n",
+    "                        loc=squared_errors.mean(),\n",
+    "                        scale=stats.sem(squared_errors)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now comes the project prelaunch phase: you need to present your solution (highlighting what you have learned, what worked and what did not, what assumptions were made, and what your system’s limitations are), document everything, and create nice presentations with clear visualizations and easy-to-remember statements (e.g., “the median income is the number one predictor of housing prices”). In this California housing example, the final performance of the system is not better than the experts’ price estimates, which were often off by about 20%, but it may still be a good idea to launch it, especially if this frees up some time for the experts so they can work on more interesting and productive tasks.\n",
+    "\n",
+    "## Launch, Monitor, and Maintain Your System"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
