started chapter 3 classifiers

--- a/Ch2_housing.ipynb
+++ b/Ch2_housing.ipynb
@@ -2109,7 +2109,11 @@
    "source": [
     "Now comes the project prelaunch phase: you need to present your solution (highlighting what you have learned, what worked and what did not, what assumptions were made, and what your system’s limitations are), document everything, and create nice presentations with clear visualizations and easy-to-remember statements (e.g., “the median income is the number one predictor of housing prices”). In this California housing example, the final performance of the system is not better than the experts’ price estimates, which were often off by about 20%, but it may still be a good idea to launch it, especially if this frees up some time for the experts so they can work on more interesting and productive tasks.\n",
     "\n",
-    "## Launch, Monitor, and Maintain Your System"
+    "## Launch, Monitor, and Maintain Your System\n",
+    "If the data keeps evolving, you will need to update your datasets and retrain your model regularly. You should probably automate the whole process as much as possible. Here are a few things you can automate:\n",
+    "- Collect fresh data regularly and label it (e.g., using human raters).\n",
+    "- Write a script to train the model and fine-tune the hyperparameters automatically. This script could run automatically, for example every day or every week, depending on your needs.\n",
+    "- Write another script that will evaluate both the new model and the previous model on the updated test set, and deploy the model to production if the performance has not decreased (if it did, make sure you investigate why)."
    ]
   },
   {
