progressed on chapter 3

--- a/Ch3_classification.ipynb
+++ b/Ch3_classification.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "       [ 1891,  3530]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,105 @@
     "\n",
     "An interesting one to look at the accuracy of the positive predictions; this is called the precision of the classifier. _precision_= $\\frac{TP}{TP+FP}$. $TP$ is the number of true positives, and $FP$ is the number of false positives.\n",
     "\n",
-    "precision is typically used along with another metric named _recall_, also called sensitivity or the true positive rate (TPR): this is the ratio of positive instances that are correctly detected by the classifier. _recall_=$\\frac{TP}{TP+FN}$. $FN$ is the number of false negatives."
+    "precision is typically used along with another metric named _recall_, also called sensitivity or the true positive rate (TPR): this is the ratio of positive instances that are correctly detected by the classifier. _recall_=$\\frac{TP}{TP+FN}$. $FN$ is the number of false negatives.\n",
+    "\n",
+    "### Precision and Recall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8370879772350012"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "\n",
+    "precision_score(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6511713705958311"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is often convenient to combine precision and recall into a single metric called the $F_1$ score, in particular if you need a simple way to compare two \n",
+    "classifiers. The $F_1$ score is the harmonic mean of precision and recall. Whereas the regular mean treats all values equally, theharmonic mean gives much more weight to low values.\n",
+    "\n",
+    "$F_1 = \\frac{2}{\\frac{1}{precision} + \\frac{1}{recall}}=\\frac{TP}{TP+\\frac{FN+FP}{2}}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7325171197343846"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "f1_score(y_train_5, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The $F_1$ score favors classifiers that have similar precision and recall. This\n",
+    "is not always what you want: in some contexts you mostly care about\n",
+    "precision, and in other contexts you really care about recall. For example,\n",
+    "if you trained a classifier to detect videos that are safe for kids, you would\n",
+    "probably prefer a classifier that rejects many good videos (low recall) but\n",
+    "keeps only safe ones (high precision), rather than a classifier that has a\n",
+    "much higher recall but lets a few really bad videos show up in your\n",
+    "product (in such cases, you may even want to add a human pipeline to\n",
+    "check the classifier’s video selection). On the other hand, suppose you\n",
+    "train a classifier to detect shoplifters in surveillance images: it is probably\n",
+    "fine if your classifier has only 30% precision as long as it has 99% recall\n",
+    "(sure, the security guards will get a few false alerts, but almost all\n",
+    "shoplifters will get caught).\n",
+    "\n",
+    "Unfortunately, you can’t have it both ways: increasing precision reduces\n",
+    "recall, and vice versa. This is called the precision/recall trade-off."
    ]
   },
   {
